<resources>
    <string name="app_name">Practica4Equipo3</string>
    <string name="PerimetroHexagono">Perímetro de un hexágono regular</string>
    <string name="ValorLado">Ingrese el valor del lado del heágono (cm)</string>
    <string name="CalcularPerimHexa">Calcular</string>
    <string name="AreaCirculo">Área del círculo</string>
    <string name="radioncm">Radio en cm</string>
    <string name="resultadoArea">Resultado</string>
    <string name="calcularArea">Calcular</string>
    <string name="radiocm">Radio en cm</string>
    <string name="triangulo_titulo">Área del triángulo</string>
    <string name="triangulo_base">Ingrese la base</string>
    <string name="triangulo_altura">Ingrese la altura</string>
    <string name="triangulo_calcular">Calcular Área</string>
    <string name="apotema">Cuanto mide el apotema (cm)</string>
    <string name="lado">Cuanto mide el lado (cm)</string>
    <string name="calcular">Cálcular área</string>
    <string name="areacirculo">Área de un circulo</string>
    <string name="AreaHexagono">Área de un Héxagono</string>
    <string name="AreaTriangul">Área de un triangulo</string>
    <string name="PerimetroCuadro">Perímetro de un cuadrado</string>
    <string name="PerimetroTriangulo">Perímetro de un triángulo</string>
    <string name="titulo">Perímetro del cuadrado</string>
    <string name="ingresarlado">Ingrese el lado</string>
    <string name="calcular_pc">Calcular</string>
    <string name="otraoperacion">Ir a otra operación</string>
    <string name="ir">IR</string>
    <string name="resulado">Resulatdo</string>
    <string name="resultado1">Resultado</string>
    <string name="titulo_per">Perímetro de Triángulo</string>
    <string name="lado_per">lado(cm)</string>
    <string name="calcular_per">Calcurar Perímetro</string>
    <string name="volver">Volver</string>
</resources>